name:                language-javascript-optics
version:             0.1.0.0
synopsis:            Optics for language-javascript.
homepage:            https://github.com/SuperpowersCorp/language-javascript-optics#readme
license:             BSD3
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          john@superpowerscorp.com
copyright:           2018 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Language.JavaScript.Optics
  build-depends:       base                                     >= 4.7 && < 5
                     , hspec
                     , language-javascript
                     , lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SuperpowersCorp/language-javascript-optics
